elastic-system/kibana/base/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: elastic-kibana-gateway
  namespace: elastic-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - kibana.local.vm
      port:
        name: http
        number: 80
        protocol: HTTP
      # tls:
      #   mode: SIMPLE
      #   credentialName: ekmnt-kibana-cert
    # - hosts:
    #     - "kibana.ekmnt"
    #   port:
    #     name: https-kb
    #     number: 443
    #     protocol: HTTPS
    #   tls:
    #     mode: SIMPLE
    #     credentialName: ekmnt-kibana-cert
