elastic-system/kibana/base/destinationRule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: kibana
spec:
  host: "kibana-kb-http.elastic-system.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: SIMPLE
      credentialName: ekmnt-elasticsearch-cert
